--- a/src/index.css
+++ b/src/index.css
@@ -256,7 +256,37 @@
 .texto-animado span:nth-child(6) {
   animation-delay: 3.5s;
 }
+.texto-animado span:nth-child(7) {
+  animation-delay: 4s;
+}
 
+.texto-animado span:nth-child(8) {
+  animation-delay: 4.5s;
+}
+
+.texto-animado span:nth-child(9) {
+  animation-delay: 5s;
+}
+
+.texto-animado span:nth-child(10) {
+  animation-delay: 5.5s;
+}
+.texto-animado span:nth-child(11) {
+  animation-delay: 6s;
+}
+.texto-animado span:nth-child(12) {
+  animation-delay: 6.5s;
+}
+.texto-animado span:nth-child(13) {
+  animation-delay: 7s;
+}
+.texto-animado span:nth-child(14) {
+  animation-delay: 7.5s;
+}
+
+.texto-animado span:nth-child(15) {
+  animation-delay: 8s;
+}
 @-webkit-keyframes text-focus-in {
   0% {
     -webkit-filter: blur(12px);
