--- a/src/index.css
+++ b/src/index.css
@@ -366,6 +366,22 @@
   z-index: -1;
 }
 
+.video {
+  width: auto;
+  height: 40vw;
+  border-radius: 2%;
+  background-color: white;
+  margin: 1vw;
+  border: 4px solid black;
+  box-shadow: 3px 3px rgb(121, 121, 121);
+}
+
+.text-app {
+  color: white;
+  font-family: kalnia-light;
+  font-size: 2vw;
+}
+
 .rounded-border-proyect {
   border-radius: 0 25% 0 25%;
 }
@@ -376,4 +392,22 @@
 
 .transition {
   transition-duration: 550ms;
+}
+
+@media screen and (max-width:510px) {
+  .video {
+    width: auto;
+    height: 80vw;
+    border-radius: 2%;
+    margin: 1vw;
+    border: 4px solid black;
+    box-shadow: 3px 3px rgb(121, 121, 121);
+
+  }
+
+  .text-app {
+    color: white;
+    font-family: kalnia-light;
+    font-size: 3vw;
+  }
 }
