--- a/src/index.css
+++ b/src/index.css
@@ -383,11 +383,15 @@
 }
 
 .rounded-border-proyect {
-  border-radius: 0 25% 0 25%;
+  border-radius: 0 25% 0 0;
 }
 
 .rounded-border-about {
-  border-radius: 25% 0% 25% 0%;
+  border-radius: 0 0% 25% 0%;
+}
+
+.rounded-border-about02 {
+  border-radius: 0 25% 25% 0%;
 }
 
 .transition {
