paginacion en apps

--- a/src/index.css
+++ b/src/index.css
@@ -1,422 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: rgb(255 255 255 / .87);
-  background-color: #3d3d3d;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale
-}
-
-@font-face {
-  font-family: "Kalnia-Medium";
-  src: url(./assets//fonts//Kalnia/static/Kalnia-Medium.ttf)
-}
-
-@font-face {
-  font-family: "Kalnia-light";
-  src: url(./assets//fonts/Kalnia/static/Kalnia-Light.ttf)
-}
-
-.kalnia-medium {
-  font-family: "Kalnia-Medium", sans-serif
-}
-
-.kalnia-light {
-  font-family: "Kalnia-Light"
-}
-
-.text-shadow {
-  text-shadow: 2px 2px #000
-}
-
-.text-shadow-p {
-  text-shadow: 1px 1px #9e9999
-}
-
-.blog-bg {
-  background-image: url(https://res.cloudinary.com/dgzghl0ur/image/upload/v1715454866/portafolio/pexels-luri-2350377_xyhsdv.jpg);
-  background-size: cover
-}
-
-.footer-bg {
-  background: url("") no-repeat;
-  background-size: cover
-}
-
-@keyframes slide {
-  0% {
-    transform: translateX(0)
-  }
-
-  50% {
-    transform: translateX(10px)
-  }
-
-  100% {
-    transform: translateX(0)
-  }
-}
-
-.slide {
-  animation-name: slide;
-  animation-duration: 3s;
-  animation-iteration-count: infinite
-}
-
-@keyframes bounce {
-  0% {
-    transform: translateY(0)
-  }
-
-  50% {
-    transform: translateY(-10px)
-  }
-
-  100% {
-    transform: translateY(0)
-  }
-}
-
-.bounce {
-  animation-name: bounce;
-  animation-duration: 3s;
-  animation-iteration-count: infinite
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(1)
-  }
-
-  50% {
-    transform: scale(1.1)
-  }
-
-  100% {
-    transform: scale(1)
-  }
-}
-
-.pulse {
-  animation-name: pulse;
-  animation-duration: 3s;
-  animation-iteration-count: infinite
-}
-
-.wobble {
-  animation-name: wobble;
-  animation-duration: 3s;
-  animation-iteration-count: infinite
-}
-
-@keyframes wobble {
-  0% {
-    transform: translateX(0) rotate(0deg)
-  }
-
-  15% {
-    transform: translateX(-30px) rotate(-5deg)
-  }
-
-  30% {
-    transform: translateX(15px) rotate(3deg)
-  }
-
-  45% {
-    transform: translateX(-15px) rotate(-3deg)
-  }
-
-  60% {
-    transform: translateX(9px) rotate(2deg)
-  }
-
-  75% {
-    transform: translateX(-6px) rotate(-1deg)
-  }
-
-  100% {
-    transform: translateX(0) rotate(0deg)
-  }
-}
-
-@-webkit-keyframes slit-in-vertical {
-  0% {
-    -webkit-transform: translateZ(-800px) rotateY(90deg);
-    transform: translateZ(-800px) rotateY(90deg);
-    opacity: 0
-  }
-
-  54% {
-    -webkit-transform: translateZ(-160px) rotateY(87deg);
-    transform: translateZ(-160px) rotateY(87deg);
-    opacity: 1
-  }
-
-  100% {
-    -webkit-transform: translateZ(0) rotateY(0);
-    transform: translateZ(0) rotateY(0)
-  }
-}
-
-@keyframes slit-in-vertical {
-  0% {
-    -webkit-transform: translateZ(-800px) rotateY(90deg);
-    transform: translateZ(-800px) rotateY(90deg);
-    opacity: 0
-  }
-
-  54% {
-    -webkit-transform: translateZ(-160px) rotateY(87deg);
-    transform: translateZ(-160px) rotateY(87deg);
-    opacity: 1
-  }
-
-  100% {
-    -webkit-transform: translateZ(0) rotateY(0);
-    transform: translateZ(0) rotateY(0)
-  }
-}
-
-.slit-in-vertical {
-  -webkit-animation: slit-in-vertical 0.5s ease-out both;
-  animation: slit-in-vertical 1s ease-out both
-}
-
-@-webkit-keyframes slide-in-top {
-  0% {
-    -webkit-transform: translateY(-1000px);
-    transform: translateY(-1000px);
-    opacity: 0
-  }
-
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    opacity: 1
-  }
-}
-
-@keyframes slide-in-top {
-  0% {
-    -webkit-transform: translateY(-1000px);
-    transform: translateY(-1000px);
-    opacity: 0
-  }
-
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    opacity: 1
-  }
-}
-
-.slide-in-top {
-  -webkit-animation: slide-in-top 0.5s cubic-bezier(.25, .46, .45, .94) both;
-  animation: slide-in-top 2s cubic-bezier(.25, .46, .45, .94) both
-}
-
-.float {
-  transition: 0.5s, color 0.1s;
-  -webkit-transition: 0.5s, color 0.1s;
-  -moz-transition: 0.5s, color 0.1s
-}
-
-.float:hover {
-  box-shadow: 0 8px 8px 0 #000000, 0 8px 8px 0 #000;
-  transform: translate(0, 5px);
-  -webkit-transform: translate(0, 5px);
-  -moz-transform: translate(0, 5px)
-}
-
-@keyframes fadeInText {
-  from {
-    opacity: 0;
-    transform: translateY(10px)
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0)
-  }
-}
-
-.texto-animado {
-  animation: fadeInText 3s ease-out forwards
-}
-
-.texto-animado span {
-  display: inline-block;
-  transform-origin: bottom;
-  animation: fadeInText 0.5s ease-out forwards;
-  opacity: 0
-}
-
-.texto-animado span:nth-child(1) {
-  animation-delay: 1s
-}
-
-.texto-animado span:nth-child(2) {
-  animation-delay: 1.5s
-}
-
-.texto-animado span:nth-child(3) {
-  animation-delay: 2s
-}
-
-.texto-animado span:nth-child(4) {
-  animation-delay: 2.5s
-}
-
-.texto-animado span:nth-child(5) {
-  animation-delay: 3s
-}
-
-.texto-animado span:nth-child(6) {
-  animation-delay: 3.5s
-}
-
-.texto-animado span:nth-child(7) {
-  animation-delay: 4s
-}
-
-.texto-animado span:nth-child(8) {
-  animation-delay: 4.5s
-}
-
-.texto-animado span:nth-child(9) {
-  animation-delay: 5s
-}
-
-.texto-animado span:nth-child(10) {
-  animation-delay: 5.5s
-}
-
-.texto-animado span:nth-child(11) {
-  animation-delay: 6s
-}
-
-.texto-animado span:nth-child(12) {
-  animation-delay: 6.5s
-}
-
-.texto-animado span:nth-child(13) {
-  animation-delay: 7s
-}
-
-.texto-animado span:nth-child(14) {
-  animation-delay: 7.5s
-}
-
-.texto-animado span:nth-child(15) {
-  animation-delay: 4s
-}
-
-@-webkit-keyframes text-focus-in {
-  0% {
-    -webkit-filter: blur(12px);
-    filter: blur(12px);
-    opacity: 0
-  }
-
-  100% {
-    -webkit-filter: blur(0);
-    filter: blur(0);
-    opacity: 1
-  }
-}
-
-@keyframes text-focus-in {
-  0% {
-    -webkit-filter: blur(12px);
-    filter: blur(12px);
-    opacity: 0
-  }
-
-  100% {
-    -webkit-filter: blur(0);
-    filter: blur(0);
-    opacity: 1
-  }
-}
-
-.text-focus-in {
-  -webkit-animation: text-focus-in 1s cubic-bezier(.55, .085, .68, .53) both;
-  animation: text-focus-in 1s cubic-bezier(.55, .085, .68, .53) both
-}
-
-.video-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100wv;
-  overflow: hidden;
-  z-index: -1
-}
-
-.video {
-  width: auto;
-  height: 40vw;
-  border-radius: 2%;
-  background-color: #fff;
-  margin: 1vw;
-  border: 4px solid #000;
-  box-shadow: 3px 3px #797979
-}
-
-.text-app {
-  color: #000;
-  font-family: kalnia-light;
-  font-size: 2vw
-}
-
-.rounded-border-proyect {
-  border-radius: 0 25% 0 0
-}
-
-.rounded-border-about {
-  border-radius: 0 0% 25% 0%
-}
-
-.rounded-border-about02 {
-  border-radius: 0 25% 25% 0%
-}
-
-.transition {
-  transition-duration: 550ms
-}
-
-.curso-section {
-  color: #000;
-  font-family: kalnia-medium;
-  font-size: 2vw
-}
-
-@media screen and (max-width:510px) {
-  .video {
-    width: auto;
-    height: 80vw;
-    border-radius: 2%;
-    margin: 1vw;
-    border: 4px solid #000;
-    box-shadow: 3px 3px #797979
-  }
-
-  .text-app {
-    color: #000;
-    font-family: kalnia-light;
-    font-size: 3vw
-  }
-
-  .app-container {
-    flex-direction: column
-  }
-}
+@tailwind base;@tailwind components;@tailwind utilities;:root{font-family:Inter,system-ui,Avenir,Helvetica,Arial,sans-serif;line-height:1.5;font-weight:400;color-scheme:light dark;color:rgb(255 255 255 / .87);background-color:#3d3d3d;font-synthesis:none;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}@font-face{font-family:"Kalnia-Medium";src:url(./assets//fonts//Kalnia/static/Kalnia-Medium.ttf)}@font-face{font-family:"Kalnia-light";src:url(./assets//fonts/Kalnia/static/Kalnia-Light.ttf)}.kalnia-medium{font-family:"Kalnia-Medium",sans-serif}.kalnia-light{font-family:"Kalnia-Light"}.text-shadow{text-shadow:2px 2px #000}.text-shadow-p{text-shadow:1px 1px #9e9999}.blog-bg{background-image:url(https://res.cloudinary.com/dgzghl0ur/image/upload/v1715454866/portafolio/pexels-luri-2350377_xyhsdv.jpg);background-size:cover}.footer-bg{background:url("") no-repeat;background-size:cover}@keyframes slide{0%{transform:translateX(0)}50%{transform:translateX(10px)}100%{transform:translateX(0)}}.slide{animation-name:slide;animation-duration:3s;animation-iteration-count:infinite}@keyframes bounce{0%{transform:translateY(0)}50%{transform:translateY(-10px)}100%{transform:translateY(0)}}.bounce{animation-name:bounce;animation-duration:3s;animation-iteration-count:infinite}@keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.1)}100%{transform:scale(1)}}.pulse{animation-name:pulse;animation-duration:3s;animation-iteration-count:infinite}.wobble{animation-name:wobble;animation-duration:3s;animation-iteration-count:infinite}@keyframes wobble{0%{transform:translateX(0) rotate(0deg)}15%{transform:translateX(-30px) rotate(-5deg)}30%{transform:translateX(15px) rotate(3deg)}45%{transform:translateX(-15px) rotate(-3deg)}60%{transform:translateX(9px) rotate(2deg)}75%{transform:translateX(-6px) rotate(-1deg)}100%{transform:translateX(0) rotate(0deg)}}@-webkit-keyframes slit-in-vertical{0%{-webkit-transform:translateZ(-800px) rotateY(90deg);transform:translateZ(-800px) rotateY(90deg);opacity:0}54%{-webkit-transform:translateZ(-160px) rotateY(87deg);transform:translateZ(-160px) rotateY(87deg);opacity:1}100%{-webkit-transform:translateZ(0) rotateY(0);transform:translateZ(0) rotateY(0)}}@keyframes slit-in-vertical{0%{-webkit-transform:translateZ(-800px) rotateY(90deg);transform:translateZ(-800px) rotateY(90deg);opacity:0}54%{-webkit-transform:translateZ(-160px) rotateY(87deg);transform:translateZ(-160px) rotateY(87deg);opacity:1}100%{-webkit-transform:translateZ(0) rotateY(0);transform:translateZ(0) rotateY(0)}}.slit-in-vertical{-webkit-animation:slit-in-vertical 0.5s ease-out both;animation:slit-in-vertical 1s ease-out both}@-webkit-keyframes slide-in-top{0%{-webkit-transform:translateY(-1000px);transform:translateY(-1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-in-top{0%{-webkit-transform:translateY(-1000px);transform:translateY(-1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}.slide-in-top{-webkit-animation:slide-in-top 0.5s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-top 2s cubic-bezier(.25,.46,.45,.94) both}.float{transition:0.5s,color 0.1s;-webkit-transition:0.5s,color 0.1s;-moz-transition:0.5s,color 0.1s}.float:hover{box-shadow:0 8px 8px 0 #000000,0 8px 8px 0 #000;transform:translate(0,5px);-webkit-transform:translate(0,5px);-moz-transform:translate(0,5px)}@keyframes fadeInText{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}.texto-animado{animation:fadeInText 3s ease-out forwards}.texto-animado span{display:inline-block;transform-origin:bottom;animation:fadeInText 0.5s ease-out forwards;opacity:0}.texto-animado span:nth-child(1){animation-delay:1s}.texto-animado span:nth-child(2){animation-delay:1.5s}.texto-animado span:nth-child(3){animation-delay:2s}.texto-animado span:nth-child(4){animation-delay:2.5s}.texto-animado span:nth-child(5){animation-delay:3s}.texto-animado span:nth-child(6){animation-delay:3.5s}.texto-animado span:nth-child(7){animation-delay:4s}.texto-animado span:nth-child(8){animation-delay:4.5s}.texto-animado span:nth-child(9){animation-delay:5s}.texto-animado span:nth-child(10){animation-delay:5.5s}.texto-animado span:nth-child(11){animation-delay:6s}.texto-animado span:nth-child(12){animation-delay:6.5s}.texto-animado span:nth-child(13){animation-delay:7s}.texto-animado span:nth-child(14){animation-delay:7.5s}.texto-animado span:nth-child(15){animation-delay:4s}@-webkit-keyframes text-focus-in{0%{-webkit-filter:blur(12px);filter:blur(12px);opacity:0}100%{-webkit-filter:blur(0);filter:blur(0);opacity:1}}@keyframes text-focus-in{0%{-webkit-filter:blur(12px);filter:blur(12px);opacity:0}100%{-webkit-filter:blur(0);filter:blur(0);opacity:1}}.text-focus-in{-webkit-animation:text-focus-in 1s cubic-bezier(.55,.085,.68,.53) both;animation:text-focus-in 1s cubic-bezier(.55,.085,.68,.53) both}.video-background{position:fixed;top:0;left:0;width:100vw;height:100wv;overflow:hidden;z-index:-1}.video{width:auto;height:40vw;border-radius:2%;background-color:#fff;margin:1vw;border:4px solid #000;box-shadow:3px 3px #797979}.text-app{color:#000;font-family:kalnia-light;font-size:2vw}.rounded-border-proyect{border-radius:0 25% 0 0}.rounded-border-about{border-radius:0 0% 25% 0%}.rounded-border-about02{border-radius:0 25% 25% 0%}.transition{transition-duration:550ms}.curso-section{color:#000;font-family:kalnia-medium;font-size:2vw}@media screen and (max-width:510px){.video{width:auto;height:80vw;border-radius:2%;margin:1vw;border:4px solid #000;box-shadow:3px 3px #797979}.text-app{color:#000;font-family:kalnia-light;font-size:3vw}.app-container{flex-direction:column}}
