--- a/src/index.css
+++ b/src/index.css
@@ -556,6 +556,20 @@
   font-size: 2vw;
 }
 
+.weather-section {
+  font-family: kalnia-light;
+  background-color: #9e9999;
+  font-size: 4vw;
+  display: flex;
+  justify-content: space-around;
+
+}
+
+.weather-section p {
+  font-size: 28px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
 @media screen and (max-width: 510px) {
   .video {
     width: auto;
