--- a/src/index.css
+++ b/src/index.css
@@ -558,15 +558,16 @@
 
 .weather-section {
   font-family: kalnia-light;
-  background-color: #9e9999;
+
   font-size: 4vw;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 
 }
 
 .weather-section p {
-  font-size: 28px;
+  font-size: 48px;
   font-family: 'Courier New', Courier, monospace;
 }
 
@@ -600,6 +601,11 @@
 
   .app-container {
     flex-direction: column;
+  }
+
+  .weather-section p {
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
   }
 
 
