--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@
 }
 
 .blog-bg {
-  background-image: url(https://res.cloudinary.com/dgzghl0ur/image/upload/v1715454866/portafolio/pexels-luri-2350377_xyhsdv.jpg);
+  background-image: url(https://storage.cloud.google.com/portafilo/pexels-luri-2350377.jpg);
   background-size: cover;
 }
 
