--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@
 }
 
 .blog-bg {
-  background-image: url(https://storage.cloud.google.com/portafilo/pexels-luri-2350377.jpg);
+  background-image: url(https://storage.googleapis.com/portafilo/pexels-luri-2350377.jpg);
   background-size: cover;
 }
 
@@ -583,7 +583,6 @@
     margin: 1vw;
     border: 1px solid #000;
     box-shadow: 3px 3px #d5d4d4;
-    background-image: url("https://res.cloudinary.com/dgzghl0ur/image/upload/v1718943019/portafolio/15325347_10154885845219636_1231900946083707787_o_wkqhqz.jpg");
   }
 
   .video-background {
